correct a mistake
